--- a/sort-table/src/index.css
+++ b/sort-table/src/index.css
@@ -31,20 +31,41 @@ code {
   display: flex;
 }
 
-#tableDiv {
-  width: 90%;
-  text-align: center;
+#leftArrow {
+ text-align: right;
+  width: 100px;
+  height: 100px;
+  margin: auto;
   
+}
+
+#rightArrow{
+  text-align: left;
+  width: 100px;
+  height: 100px;
+  margin: auto;
+  
+}
+
+#bigDiv {
+  height: 100%;
+  width: 90%;
+}
+
+#tableDiv {
+  text-align: center;
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%); 
 }
 
 #table {
   background-color: #fffff0;
   width: 800px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
+ 
 }
 
 .row {
